2005-04-22  Angus Leeming  <leeming@lyx.org>

	* package.C (get_binary_path): on prompting from Rob Bearman,
	ensure that the name of the executable, as input at the command
	line has a ".exe" suffix so that various file interogations
	work on Windows.

2005-04-21  Angus Leeming  <leeming@lyx.org>

	* forkedcontr.C: add #include <csignal>.

2005-04-19  Angus Leeming  <leeming@lyx.org>

	* forkedcall.C: protect system-specific headers with preprocessor
	guards.
	(running): don't call waitpid() on Windows.
	(waitForChild): add Windows-specific code to wait for a child process
	to finish.
	(generateChild): add Windows-specific code to spawn the child in the
	first place.

	* forkedcontr.[Ch]: remove cruft from the days of the dialog to kill
	child processes. Class no longer derives from trackable, no longer
	emits a global signal when a child process is reaped.
	(getPIDs, getCommand): removed.

	* forkedcontr.C: protect system-specific headers with preprocessor
	guards. Add Windows-specific code to wait for a child process
	asynchronously.
	(getChildErrorMessage): new function, wrapping the Windows native API.
	(timer): use WaitForSingleObject and GetExitCodeProcess on Windows.

	* kill.C (kill): add Ruurd's Windows-specific code to terminate
	a child process.

2005-04-19  Angus Leeming  <leeming@lyx.org>

	* package.C (get_temp_dir): call GetLongPathName on Windows.

2005-04-17  Angus Leeming  <leeming@lyx.org>

	* filetools.C (MakeDisplayPath): invoke os::external_path before
	returning path.

	* os_win32.C (external_path): convert '/' chars to '\'.

	* filetools.[Ch] (latex_path): new function which modifies
	an input path containing space and '~' characters into something that
	LaTeX can understand.

2005-04-17  Angus Leeming  <leeming@lyx.org>

	* forkedcall.C (generateChild): do not strip quotes from args on
	Windows.
	Wrap lyxerr output inside an if (lyxerr.debugging(Debug::FILES))
	block.

2005-02-17  Angus Leeming  <leeming@lyx.org>
